# sajit

./: Cargo.toml  README.md  build.rs  sajit.rs  support
.github/workflows/: devskim.yml  osv-scanner.yml  testjit.yml
examples/: bin  codegen.rs  hints  jit.rs  memfd.rs  reloc  testjit.rs
examples/obsolete/: llvm.rs
jitlinkc++/: calcrtdyld.cpp  calcrtdyld.h  calcsize.cpp  calcsize.h  jitlink.cpp  jitlink.h  jitlinkc++.h  objcalc.cpp  objcalc.h  rtdyld.cpp  rtdyld.h
llvmtest/: Cargo.toml
llvmtest/src/: main.rs
src/: lib.rs
src/advanced/: mod.rs  symbpool.rs
src/advanced/linux/: mod.rs
src/advanced/llvm/: jitlinkdry.rs  mod.rs  rtdyld.rs
src/advanced/macos/: mod.rs
src/advanced/windows/: mod.rs
src/coffr/: coff.rs  loader.rs  mod.rs
src/platform/: linux.rs  mod.rs  win32.rs
src/platform/unix/: mod.rs
src/platform/windows/: mod.rs
src/relcar/: mod.rs
src/relocations/: llvmreloc.rs  mod.rs
src/relocations/llvmreloc/: jitlink.rs  mod.rs  rtdyld.rs
