[package]
name = "sajit"
description = "Sa Programming Language Just-In-Time Loader"
version = "0.0.1"
edition = "2024"

[dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_System_Diagnostics_Debug",
  "Win32_Security",
  "Win32_Storage_FileSystem",
] }

[target.'cfg(all(any(target_os="linux", target_os="macos"), not(target_arch = "x86_64")))'.dependencies]
clear-cache = "0.1"

[dev-dependencies]
cranelift = { version = "^0.130", features = ["native"] }
