[package]
name = "sajit"
description = "Good Enough JIT Code Slab Allocator, Relocator, Linker interface"
version = "0.0.1"
edition = "2024"
rust-version = "1.95"

[dependencies]
libc = "^0.2"

[target.'cfg(windows)'.dependencies]
binrw = "^0.15"
windows = { version = "^0.62", features = [
  "Win32_Security",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_System_Diagnostics_Debug",
  "Win32_Foundation",
  "Win32_System",
  "Win32_System_SystemServices",
] }

[build-dependencies]
# bindgen = { version = "^0.72", optional = true }
# Generally that is 0.72.1 plus some recent changes -- but the one thing that
# matters over 0.72.1 is that it merges
# <https://github.com/rust-lang/rust-bindgen/pull/2403> to fix
# <https://github.com/rust-lang/rust-bindgen/issues/2991>, which affects only
# native32.
bindgen = { git = "https://github.com/chrysn-pull-requests/rust-bindgen", branch = "extended-floats", optional = true }
cc = { version = "^1", optional = true }

[dev-dependencies]
cranelift = { version = "^0.132", features = ["native"] }

[features]
llvm = ["dep:cc", "dep:bindgen"]
